--- a/LossesCalculationCore/LossesCalculationCore.csproj
+++ b/LossesCalculationCore/LossesCalculationCore.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Engine\Engine.cs" />
+    <Compile Include="Engine\AsyncEngine.cs" />
     <Compile Include="IValuable.cs" />
     <Compile Include="Losses\TransformatorLoss.cs" />
     <Compile Include="Losses\TransmissionLoss.cs" />
