--- a/LossesCalculationCore/LossesCalculationCore.csproj
+++ b/LossesCalculationCore/LossesCalculationCore.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Engine\AsyncEngine.cs" />
+    <Compile Include="Engine\ParallelEngine.cs" />
     <Compile Include="IValuable.cs" />
     <Compile Include="Losses\TransformatorLoss.cs" />
     <Compile Include="Losses\TransmissionLoss.cs" />
