--- a/ElectricityWeb/Web.config
+++ b/ElectricityWeb/Web.config
@@ -31,6 +31,7 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <globalization culture="en-US" uiCulture="en" />
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
