--- a/ElectricityWeb/Views/Web.config
+++ b/ElectricityWeb/Views/Web.config
@@ -36,6 +36,8 @@
         Чтобы изменить такое поведение, примените ValidateInputAttribute к
         контроллеру или действию.
     -->
+    <customErrors mode="Off"/>
+
     <pages
         validateRequest="false"
         pageParserFilterType="System.Web.Mvc.ViewTypeParserFilter, System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"
