--- a/ElectricityWeb/ElectricityWeb.csproj
+++ b/ElectricityWeb/ElectricityWeb.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Controllers\EngineController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LineController.cs" />
+    <Compile Include="Controllers\LossController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -145,15 +146,18 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Content Include="Content\font\material-design-icons\LICENSE.txt" />
     <Content Include="Content\font\material-design-icons\Material-Design-Icons.svg" />
+    <Content Include="Content\img\ajax-loader.gif" />
+    <Content Include="Content\img\async.JPG" />
+    <Content Include="Content\img\cables.jpg" />
     <Content Include="Content\img\engine.png" />
     <Content Include="Content\img\engine2.png" />
-    <Content Include="Content\img\transformator.png" />
+    <Content Include="Content\img\transformator.jpg" />
     <Content Include="Content\img\transformator2.png" />
-    <Content Include="Content\img\transmission.png" />
+    <Content Include="Content\img\transmission.jpg" />
     <Content Include="Content\img\transmission2.png" />
     <Content Include="Content\js\animation.js" />
-    <Content Include="Content\js\bin\materialize.js" />
-    <Content Include="Content\js\bin\materialize.min.js" />
+    <Content Include="Content\js\target\materialize.js" />
+    <Content Include="Content\js\target\materialize.min.js" />
     <Content Include="Content\js\buttons.js" />
     <Content Include="Content\js\cards.js" />
     <Content Include="Content\js\character_counter.js" />
@@ -234,6 +238,11 @@
     <Content Include="Content\css\site.min.css">
       <DependentUpon>site.css</DependentUpon>
     </Content>
+    <None Include="Content\js\jquery\jquery-2.1.3.intellisense.js" />
+    <Content Include="Content\js\jquery\jquery-2.1.3.js" />
+    <Content Include="Content\js\jquery\jquery-2.1.3.min.js" />
+    <Content Include="Content\js\jquery\jquery.unobtrusive-ajax.js" />
+    <Content Include="Content\js\jquery\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -242,9 +251,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Views\Web.config" />
+    <Content Include="Views\Loss\TransmissionResults.cshtml" />
+    <Content Include="Views\Line\LinesResult.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Scripts\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -266,10 +278,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Home\TransformatorLoss.cshtml" />
+    <Content Include="Views\Loss\Transformator.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Home\TransmissionLoss.cshtml" />
+    <Content Include="Views\Loss\Transmission.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Engine\Async.cshtml" />
@@ -329,11 +341,13 @@
     <Content Include="Content\font\roboto\Roboto-Thin.woff2" />
     <None Include="Properties\PublishProfiles\MyAsp.net.pubxml" />
     <Content Include="Views\Engine\AsyncChart.cshtml" />
+    <Content Include="Content\js\jquery\jquery-2.1.3.min.map" />
     <None Include="Views\Engine\Parallel.cshtml" />
     <Content Include="Views\Engine\Serial.cshtml" />
     <Content Include="Views\Line\Choose.cshtml" />
     <Content Include="Views\Line\Edit.cshtml" />
     <Content Include="Views\Line\LinesTable.cshtml" />
+    <Content Include="Views\Loss\TransformatorResults.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
