--- a/ElectricityWeb/packages.config
+++ b/ElectricityWeb/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="bootstrap" version="3.3.1" targetFramework="net45" />
   <package id="DotNet.Highcharts" version="4.0" targetFramework="net45" />
-  <package id="jQuery" version="1.9.0" targetFramework="net45" />
+  <package id="jQuery" version="2.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc.ru" version="4.0.30506.0" targetFramework="net40" />
@@ -17,6 +17,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost.ru" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebPages.ru" version="2.0.30506.0" targetFramework="net40" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Net.Http.ru" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
