--- a/ElectricityWeb/packages.config
+++ b/ElectricityWeb/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="3.3.1" targetFramework="net45" />
+  <package id="Chart.js" version="1.0.2" targetFramework="net45" />
   <package id="DotNet.Highcharts" version="4.0" targetFramework="net45" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
