--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,7 @@ AutoTest.Net/
 
 # Installshield output folder
 [Ee]xpress/
+.idea/
 
 # DocProject is a documentation generator add-in
 DocProject/buildhelp/
