--- a/ElectricityWeb/packages.config
+++ b/ElectricityWeb/packages.config
@@ -1,14 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.3.1" targetFramework="net45" />
   <package id="Chart.js" version="1.0.2" targetFramework="net45" />
   <package id="DotNet.Highcharts" version="4.0" targetFramework="net45" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="2.2.5" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc.ru" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor.ru" version="2.0.30506.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Client.ru" version="4.0.30506.0" targetFramework="net40" />
@@ -23,4 +26,5 @@
   <package id="Microsoft.Net.Http.ru" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
