--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,7 @@ AutoTest.Net/
 # Installshield output folder
 [Ee]xpress/
 .idea/
+.tscache/
 
 # DocProject is a documentation generator add-in
 DocProject/buildhelp/
