--- a/ElectricityWeb/packages.config
+++ b/ElectricityWeb/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.3.1" targetFramework="net45" />
   <package id="Chart.js" version="1.0.2" targetFramework="net45" />
   <package id="DotNet.Highcharts" version="4.0" targetFramework="net45" />
+  <package id="fabricjs.TypeScript.DefinitelyTyped" version="2.7.4" targetFramework="net45" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="2.2.5" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
