--- a/ElectricityWeb/ElectricityWeb.csproj
+++ b/ElectricityWeb/ElectricityWeb.csproj
@@ -24,6 +24,14 @@
     <TargetFrameworkProfile />
     <WebGreaseLibPath>..\packages\WebGrease.1.5.2\lib</WebGreaseLibPath>
     <TypeScriptToolsVersion>1.4</TypeScriptToolsVersion>
+    <TypeScriptCompileOnSaveEnabled>False</TypeScriptCompileOnSaveEnabled>
+    <MvcProjectUpgradeChecked>true</MvcProjectUpgradeChecked>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
+    <OldToolsVersion>12.0</OldToolsVersion>
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -169,6 +177,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Content Include="Content\apps\complex\img\test.png" />
     <Content Include="Content\apps\complex\js\complex.js" />
     <Content Include="Content\apps\complex\js\min\complex.min.js" />
     <Content Include="Content\apps\complex\min\complex.min.js" />
@@ -360,7 +369,9 @@
   <ItemGroup>
     <TypeScriptCompile Include="Content\apps\complex\complex.ts" />
     <TypeScriptCompile Include="Content\apps\complex\input\input.ts" />
+    <TypeScriptCompile Include="Content\apps\complex\interface\ui.ts" />
     <TypeScriptCompile Include="Content\apps\complex\tools.ts" />
+    <TypeScriptCompile Include="Content\apps\complex\visual\creating\creator.ts" />
     <TypeScriptCompile Include="Content\apps\complex\visual\visual.ts" />
     <TypeScriptCompile Include="Content\js\typings\jquery\jquery.d.ts" />
     <TypeScriptCompile Include="Content\js\typings\fabricjs\fabricjs.d.ts" />
